--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,28 @@
 .App {
   text-align: center;
 }
+.leaflet-container {
+    height: 1000px;
+    width: 100%;
+    position: fixed;
+    top: 140px;
+}
+em  {
+    color:white;
+}
 
+circle {
+    color: red;
+}
+
+//Todo aseta
+
+.leaflet-map-pane svg {
+    z-index: ""
+}
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -35,4 +53,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.leaflet-map-pane svg {
+    z-index: -201 ;
+   
 }
